creates new folder structure and move things around to try to clear the mess I made in the beginning

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "node-api",
-	"main": "server.js",
+	"main": "app.js",
 	"dependencies": {
 		"express": "~4.0.0",
 		"mongoose": "~4.4.3",
